--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.bg-slideshow img {
+  object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  filter: brightness(0.8) saturate(1.1);
+}
+
 .section {
   position: absolute;
   top: 0; left: 0; width: 100%; height: 100vh;
